Sculpt Painting: Color Filter saturates colors that have no saturation #97097

Closed
opened 2022-04-06 10:09:17 +02:00 by Julien Kaspar · 12 comments
Member

System Information
Operating system: Linux-5.4.0-107-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-05 23:33, hash: 931ae424b9

Short description of error
This relates to the new color attribute painting tools in sculpt mode. When using the the Color Filter tool and setting it to "Saturation" it will always saturate colors that have no saturation. This is very unexpected behaviour. If a color has a starting saturation of 0, then it should not be affected by additional saturation.

Exact steps for others to reproduce the error

  • Enter sculpt mode
  • Use the Paint tool to paint some colors and some white with a few strokes
  • Switch to the Color Filter tool and set it to "Saturation" in the tool settings
  • Click and drag from left to right and see how the painted and un-painted areas get affected
**System Information** Operating system: Linux-5.4.0-107-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-05 23:33, hash: `931ae424b9` **Short description of error** This relates to the new color attribute painting tools in sculpt mode. When using the the Color Filter tool and setting it to "Saturation" it will always saturate colors that have no saturation. This is very unexpected behaviour. If a color has a starting saturation of 0, then it should not be affected by additional saturation. **Exact steps for others to reproduce the error** - Enter sculpt mode - Use the Paint tool to paint some colors and some white with a few strokes - Switch to the Color Filter tool and set it to "Saturation" in the tool settings - Click and drag from left to right and see how the painted and un-painted areas get affected
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Starting point with a invisible vertical white stroke as well:

20220406-103834.png

After applying tool:

20220406-103841.png

Starting point with a invisible vertical white stroke as well: ![20220406-103834.png](https://archive.blender.org/developer/F12977665/20220406-103834.png) After applying tool: ![20220406-103841.png](https://archive.blender.org/developer/F12977667/20220406-103841.png)

This issue was referenced by a99639792b

This issue was referenced by a99639792b1628493139eb9943ae4befbdc6b613
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-04-11 19:25:46 +02:00
Author
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Author
Member

@JosephEagar I would reopen the bug since the core issue is not fixed. Unpainted colors are no longer affected by the tool with a99639792b,
but area that is painted with pure white or any other color that has no saturation is still being saturated in random colors.

I suggest to have the starting saturation be a multiplier to how strong the saturation operation is per color. This is how other painting applications like Krita handle these operations as well.

@JosephEagar I would reopen the bug since the core issue is not fixed. Unpainted colors are no longer affected by the tool with a99639792b, but area that is painted with pure white or any other color that has no saturation is still being saturated in random colors. I suggest to have the starting saturation be a multiplier to how strong the saturation operation is per color. This is how other painting applications like Krita handle these operations as well.
Author
Member

Also raising the priority since any recent color attribute issues should get solved for Blender 3.2.

Also raising the priority since any recent color attribute issues should get solved for Blender 3.2.

This issue was referenced by 65e7219706

This issue was referenced by 65e7219706ece1d08c7a1e0c93497235ae6782b1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

I'm still not satisfied with the current solution. I'll create a new task for this so we can tackle this properly at a later time.

I'm still not satisfied with the current solution. I'll create a new task for this so we can tackle this properly at a later time.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97097
No description provided.