Fix T97097: Color Filter saturates colors that have no saturation